@@ -5,5 +5,7 @@ quelea (2015.3) stable; urgency=normal
   * Auto-play now works
   * Improve bible passage text layout
   * Add songpro importer
+  * Fix search behaviour to ignore non-alphanumeric characters in index and search string
+  * Fix long search time when searching for a non-indexed (non-alphanumeric) character
 
  -- Michael Berry <michael@quelea.org>  Wednesday, 26 April 2015 00:00:00 +0000
